--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -4,8 +4,7 @@ on:
     branches:
       - main
     paths:
-      - "**/*.tf"
-      - ".github/workflows/**"
+      - "docs/*"
 
 jobs:
   trigger-build:
