Complete first blog

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 sburton:
   name: Steven Burton
   title: Head of Delivery at Burendo
-  url: https://github.com/steveburtonBUR
+  url: https://www.testersfindaway.com
   email: steven.burton@burendo.com
