--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -3,3 +3,9 @@ sburton:
   title: Head of Delivery at Burendo
   url: https://www.testersfindaway.com
   email: steven.burton@burendo.com
+
+bbayes:
+  name: Brian Bayes
+  title: Senior Consultant at Burendo
+  url: https://www.linkedin.com/in/brianbayes
+  email: brian.bayes@burendo.com
