--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -3,9 +3,11 @@ sburton:
   title: Head of Delivery at Burendo
   url: https://www.testersfindaway.com
   email: steven.burton@burendo.com
+  image_url: https://handbook.burendo.com/img/sburton.jpg
 
 bbayes:
   name: Brian Bayes
   title: Senior Consultant at Burendo
   url: https://www.linkedin.com/in/brianbayes
   email: brian.bayes@burendo.com
+  image_url: https://handbook.burendo.com/img/bbayes.jpg
