Add Connor Avery as an author
Signed-off-by: Connor Avery <55276424+connoravo@users.noreply.github.com>

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -11,3 +11,11 @@ bbayes:
   url: https://www.linkedin.com/in/brianbayes
   email: brian.bayes@burendo.com
   image_url: https://handbook.burendo.com/img/bbayes.jpg
+
+
+cavery:
+  name: Connor Avery
+  title: Senior Consultant at Burendo
+  url: https://www.linkedin.com/in/connoravery/
+  email: connor.avery@burendo.com
+  image_url: https://handbook.burendo.com/img/cavery.jpg
