--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -19,3 +19,10 @@ cavery:
   url: https://www.linkedin.com/in/connoravery/
   email: connor.avery@burendo.com
   image_url: https://handbook.burendo.com/img/cavery.jpg
+
+cscottthomas:
+  name: Chris Scott-Thomas
+  title: Engineering Practice Lead at Burendo
+  url: https://www.linkedin.com/in/chris-scott-thomas/
+  email: chris.scott-thomas@burendo.com
+  image_url: https://handbook.burendo.com/img/cscottthomas.jpg
