Move things about a bit

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -26,3 +26,10 @@ cscottthomas:
   url: https://www.linkedin.com/in/chris-scott-thomas/
   email: chris.scott-thomas@burendo.com
   image_url: https://handbook.burendo.com/img/cscottthomas.jpg
+
+cscottthomas:
+  name: Paul Glover
+  title: Principal Consultant at Burendo
+  url: https://www.linkedin.com/in/paul-glover-b4287716/
+  email: paul.glover@burendo.com
+  image_url: https://handbook.burendo.com/img/cscottthomas.jpg
