--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -27,7 +27,7 @@ cscottthomas:
   email: chris.scott-thomas@burendo.com
   image_url: https://handbook.burendo.com/img/cscottthomas.jpg
 
-cscottthomas:
+pglover:
   name: Paul Glover
   title: Principal Consultant at Burendo
   url: https://www.linkedin.com/in/paul-glover-b4287716/
