--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -32,4 +32,4 @@ pglover:
   title: Principal Consultant at Burendo
   url: https://www.linkedin.com/in/paul-glover-b4287716/
   email: paul.glover@burendo.com
-  image_url: https://handbook.burendo.com/img/cscottthomas.jpg
+  image_url: https://handbook.burendo.com/img/pglover.jpg
