Add Zesh as an author

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -33,3 +33,10 @@ pglover:
   url: https://www.linkedin.com/in/paul-glover-b4287716/
   email: paul.glover@burendo.com
   image_url: https://handbook.burendo.com/img/pglover.jpg
+
+zzoheb:
+  name: Zeshan Zoheb
+  title: Consultant at Burendo
+  url: https://www.linkedin.com/in/zeshan-zoheb-5a838486/
+  email: zeshan.zoheb@burendo.com
+  image_url: https://handbook.burendo.com/img/zzoheb.jpg
