--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -33,3 +33,10 @@ pglover:
   url: https://www.linkedin.com/in/paul-glover-b4287716/
   email: paul.glover@burendo.com
   image_url: https://handbook.burendo.com/img/pglover.jpg
+
+  plemons:
+  name: Paddy Lemons
+  title: Principal Consultant at Burendo
+  url: https://www.linkedin.com/in/paddylemons/
+  email: patrick.lemons@burendo.com
+  image_url: https://handbook.burendo.com/img/plemons.png
