Add Zesh as an author (#81)
Co-authored-by: steveburtonBUR <106547073+steveburtonBUR@users.noreply.github.com>

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -33,6 +33,13 @@ pglover:
   email: paul.glover@burendo.com
   image_url: https://handbook.burendo.com/img/pglover.jpg
 
+zzoheb:
+  name: Zeshan Zoheb
+  title: Consultant at Burendo
+  url: https://www.linkedin.com/in/zeshan-zoheb-5a838486/
+  email: zeshan.zoheb@burendo.com
+  image_url: https://handbook.burendo.com/img/zzoheb.jpg
+
 plemons:
   name: Paddy Lemons
   title: Principal Consultant at Burendo
