Added Bex to authors.yml

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -46,3 +46,10 @@ plemons:
   url: https://www.linkedin.com/in/paddylemons/
   email: patrick.lemons@burendo.com
   image_url: https://handbook.burendo.com/img/plemons.png
+
+  rshaw:
+  name: Rebecca Shaw
+  title: Principal Managing Consultant at Burendo
+  url: www.linkedin.com/in/rebecca-shaw-rs100
+  email: rebecca.shaw@burendo.com
+  image_url: https://handbook.burendo.com/img/rshaw.jpg
