--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -50,6 +50,6 @@ plemons:
 rshaw:
   name: Rebecca Shaw
   title: Principal Managing Consultant at Burendo
-  url: www.linkedin.com/in/rebecca-shaw-rs100
+  url: https://www.linkedin.com/in/rebecca-shaw-rs100
   email: rebecca.shaw@burendo.com
-  image_url: https://handbook.burendo.com/img/rshaw.jpg
+  image_url: https://handbook.burendo.com/img/rshaw.png
