Create Ian as an author
Signed-off-by: ChrisScottThomas <chris.scott-thomas@burendo.com>

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -53,3 +53,10 @@ rshaw:
   url: https://www.linkedin.com/in/rebecca-shaw-rs100
   email: rebecca.shaw@burendo.com
   image_url: https://handbook.burendo.com/img/rshaw.png
+
+iwatson:
+  name: Ian Watson
+  title: head of Delivery at Burendo
+  url: https://www.linkedin.com/in/ian-watson-75267112/
+  email: ian.watson@burendo.com
+  image_url: https://handbook.burendo.com/img/iwatson.png
