fix date on blog, fix formatting
Signed-off-by: ChrisScottThomas <chris.scott-thomas@burendo.com>

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -56,7 +56,7 @@ rshaw:
 
 iwatson:
   name: Ian Watson
-  title: head of Delivery at Burendo
+  title: Head of Delivery at Burendo
   url: https://www.linkedin.com/in/ian-watson-75267112/
   email: ian.watson@burendo.com
   image_url: https://handbook.burendo.com/img/iwatson.png
