--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -60,3 +60,10 @@ iwatson:
   url: https://www.linkedin.com/in/ian-watson-75267112/
   email: ian.watson@burendo.com
   image_url: https://handbook.burendo.com/img/iwatson.png
+
+wmavrodaris:
+  name: Warran Mavrodaris
+  title: Senior Agile Consultant and Scrum Master 
+  url: https://www.linkedin.com/in/warranmav/
+  email: warran.mavrodaris@burendo.com
+  image_url: https://handbook.burendo.com/img/wmavrodaris.png
