--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -67,3 +67,10 @@ wmavrodaris:
   url: https://www.linkedin.com/in/warranmav/
   email: warran.mavrodaris@burendo.com
   image_url: https://handbook.burendo.com/img/wmavrodaris.png
+
+jscott:
+  name: James Scott
+  title: Senior Agile Consultant and Scrum Master 
+  url: https://www.linkedin.com/in/james-scott-03a156213/
+  email: james.scott@burendo.com
+  image_url: https://handbook.burendo.com/img/jscott.png
