--- a/.pages.yml
+++ b/.pages.yml
@@ -31,7 +31,7 @@ content:
         label: Cover Image
         required: false
         options:
-          path: img
+          path: blog/images
           extensions: [ jpg, jpeg, png ]
       
       - type: string
@@ -48,6 +48,7 @@ content:
       - type: rich-text
         name: body
         label: Body
+        
   - name: docs
     label: Docs
     type: collection
@@ -96,7 +97,7 @@ content:
         label: Image
         required: false
         options:
-          path: img
+          path: docs/static-menu/images
           extensions: [ jpg, jpeg, png ]
       
       - type: rich-text
