rich-text has a bug
Signed-off-by: ChrisScottThomas <chris.scott-thomas@burendo.com>

--- a/.pages.yml
+++ b/.pages.yml
@@ -45,7 +45,7 @@ content:
         list: true
         required: false
       
-      - type: rich-text
+      - type: text
         name: body
         label: Body
         
