--- a/.pages.yml
+++ b/.pages.yml
@@ -100,6 +100,6 @@ content:
           path: docs/static-menu/images
           extensions: [ jpg, jpeg, png ]
       
-      - type: text
-        name: body
+      - name: body
         label: Body
+        type: rich-text
