--- a/.pages.yml
+++ b/.pages.yml
@@ -1,3 +1,13 @@
+media: 
+  - name: blog_media
+    label: Blog Media
+    input: blog/images
+    output: /blog/images
+  - name: docs_media
+    label: Docs Media
+    input: docs/static-menu/images
+    output: /docs/static-menu/images
+    
 content:
   - name: blog
     label: Blog
@@ -31,7 +41,7 @@ content:
         label: Cover Image
         required: false
         options:
-          path: blog/images
+          media: Blog Media
           extensions: [ jpg, jpeg, png ]
       
       - type: string
@@ -97,10 +107,9 @@ content:
         label: Image
         required: false
         options:
-          path: docs/static-menu/images
+          media: Docs Media
           extensions: [ jpg, jpeg, png ]
       
-      - type: rich-text
-        name: body
+      - name: body
         label: Body
-        isBody: true
+        type: rich-text
