update to new path for author images
Signed-off-by: ChrisScottThomas <chris.scott-thomas@burendo.com>

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -3,74 +3,74 @@ sburton:
   title: Head of Delivery at Burendo
   url: https://www.testersfindaway.com
   email: steven.burton@burendo.com
-  image_url: https://handbook.burendo.com/img/sburton.jpg
+  image_url: https://handbook.burendo.com/img/authors/sburton.jpg
 
 bbayes:
   name: Brian Bayes
   title: Senior Consultant at Burendo
   url: https://www.linkedin.com/in/brianbayes
   email: brian.bayes@burendo.com
-  image_url: https://handbook.burendo.com/img/bbayes.jpg
+  image_url: https://handbook.burendo.com/img/authors/bbayes.jpg
 
 cavery:
   name: Connor Avery
   title: Senior Consultant at Burendo
   url: https://www.linkedin.com/in/connoravery/
   email: connor.avery@burendo.com
-  image_url: https://handbook.burendo.com/img/cavery.jpg
+  image_url: https://handbook.burendo.com/img/authors/cavery.jpg
 
 cscottthomas:
   name: Chris Scott-Thomas
   title: Engineering Practice Lead at Burendo
   url: https://www.linkedin.com/in/chris-scott-thomas/
   email: chris.scott-thomas@burendo.com
-  image_url: https://handbook.burendo.com/img/cscottthomas.jpg
+  image_url: https://handbook.burendo.com/img/authors/cscottthomas.jpg
 
 pglover:
   name: Paul Glover
   title: Principal Consultant at Burendo
   url: https://www.linkedin.com/in/paul-glover-b4287716/
   email: paul.glover@burendo.com
-  image_url: https://handbook.burendo.com/img/pglover.jpg
+  image_url: https://handbook.burendo.com/img/authors/pglover.jpg
 
 zzoheb:
   name: Zeshan Zoheb
   title: Consultant at Burendo
   url: https://www.linkedin.com/in/zeshan-zoheb-5a838486/
   email: zeshan.zoheb@burendo.com
-  image_url: https://handbook.burendo.com/img/zzoheb.jpg
+  image_url: https://handbook.burendo.com/img/authors/zzoheb.jpg
 
 plemons:
   name: Paddy Lemons
   title: Principal Consultant at Burendo
   url: https://www.linkedin.com/in/paddylemons/
   email: patrick.lemons@burendo.com
-  image_url: https://handbook.burendo.com/img/plemons.png
+  image_url: https://handbook.burendo.com/img/authors/plemons.png
 
 rshaw:
   name: Rebecca Shaw
   title: Principal Managing Consultant at Burendo
   url: https://www.linkedin.com/in/rebecca-shaw-rs100
   email: rebecca.shaw@burendo.com
-  image_url: https://handbook.burendo.com/img/rshaw.png
+  image_url: https://handbook.burendo.com/img/authors/rshaw.png
 
 iwatson:
   name: Ian Watson
   title: Head of Delivery at Burendo
   url: https://www.linkedin.com/in/ian-watson-75267112/
   email: ian.watson@burendo.com
-  image_url: https://handbook.burendo.com/img/iwatson.png
+  image_url: https://handbook.burendo.com/img/authors/iwatson.png
 
 wmavrodaris:
   name: Warran Mavrodaris
   title: Senior Agile Consultant and Scrum Master 
   url: https://www.linkedin.com/in/warranmav/
   email: warran.mavrodaris@burendo.com
-  image_url: https://handbook.burendo.com/img/wmavrodaris.png
+  image_url: https://handbook.burendo.com/img/authors/wmavrodaris.png
 
 jscott:
   name: James Scott
   title: Senior Agile Consultant and Scrum Master 
   url: https://www.linkedin.com/in/james-scott-03a156213/
   email: james.scott@burendo.com
-  image_url: https://handbook.burendo.com/img/jscott.png
+  image_url: https://handbook.burendo.com/img/authors/jscott.png
